# KindlyEvasive

./: .gitignore  README.md
KindlyBuilder/: CMakeLists.txt  KindlyBuilder.c  KindlyBuilder.h
KindlyBuilder/Core/Include/: Banner.h  Cmd.h  Crypto.h  Http.h  Pe.h  Utils.h
KindlyBuilder/Core/Src/: Banner.c  Cmd.c  Crypto.c  Http.c  Pe.c  Utils.c
KindlyPayload/: Beacond.h  CMakeLists.txt
KindlyPayload/Core/Include/: API.h  Crypto.h  EvadeAV.h  Http.h  Macros.h  Utils.h  Wrappers.h
KindlyPayload/Core/Src/: API.c  Crypto.c  EvadeAV.c  Http.c  Utils.c
KindlyPayload/Lib/DLLMemLdr/: DllMemLdr.c  DllMemLdr.h
KindlyPayload/Lib/cJSON/: cJSON.c  cJSON.h
KindlyPayload/Payloads/: Dll.c  Shellcode.c
KindlyPayload/Payloads/Common/: Common.c  Common.h
